[gd_scene load_steps=10 format=2]

[ext_resource path="res://Minijuegos/Lanchas/etc/game_over_gui.gd" type="Script" id=1]
[ext_resource path="res://Minijuegos/Lanchas/assets/fonts/pirate.tres" type="DynamicFont" id=2]
[ext_resource path="res://Minijuegos/Lanchas/assets/fonts/CelticSea-8MLXz.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 3
outline_color = Color( 0.0196078, 0.0196078, 0.0196078, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="ImageTexture" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 100, 40 )

[sub_resource type="DynamicFont" id=4]
size = 60
font_data = ExtResource( 3 )

[sub_resource type="ImageTexture" id=5]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 120, 40 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="PopupDeath" type="Popup" parent="."]
pause_mode = 2
visible = true
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="PopupDeath"]
margin_left = 3.0
margin_right = 568.0
margin_bottom = 336.0
color = Color( 0.784314, 0.168627, 0.168627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="PopupDeath"]
margin_right = 570.0
margin_bottom = 94.0
color = Color( 0.2, 0.152941, 0.145098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="PopupDeath"]
margin_left = 44.2894
margin_top = 106.195
margin_right = 632.289
margin_bottom = 187.195
custom_fonts/font = SubResource( 1 )
text = "Mala Suerte"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PopupDeath"]
margin_left = 103.462
margin_top = 24.3279
margin_right = 691.462
margin_bottom = 105.328
custom_fonts/font = ExtResource( 2 )
text = "!Barco Destruido!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="PopupDeath"]
margin_left = 50.0338
margin_top = 173.274
margin_right = 525.034
margin_bottom = 422.274
custom_fonts/font = ExtResource( 2 )
text = "Final Score: 300
"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonOK" type="TouchScreenButton" parent="PopupDeath"]
position = Vector2( 441.05, 274 )
normal = SubResource( 2 )
shape = SubResource( 3 )

[node name="ColorRect" type="ColorRect" parent="PopupDeath/ButtonOK"]
margin_left = -100.0
margin_top = -40.0
margin_right = 98.0
margin_bottom = 39.0
color = Color( 0.384314, 0.156863, 0.156863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="PopupDeath/ButtonOK"]
margin_left = -69.0
margin_top = -30.0
margin_right = 76.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 4 )
text = "Reset"
align = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonOK2" type="TouchScreenButton" parent="PopupDeath"]
position = Vector2( 167.05, 274 )
normal = SubResource( 5 )
shape = SubResource( 6 )

[node name="ColorRect" type="ColorRect" parent="PopupDeath/ButtonOK2"]
margin_left = -121.0
margin_top = -41.0
margin_right = 119.0
margin_bottom = 39.0
color = Color( 0.384314, 0.156863, 0.156863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="PopupDeath/ButtonOK2"]
margin_left = -108.0
margin_top = -30.0
margin_right = 83.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 4 )
text = "Volver"
align = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackShadow" type="ColorRect" parent="."]
visible = false
margin_left = -1446.0
margin_top = -1995.0
margin_right = 2204.0
margin_bottom = 3117.0
focus_previous = NodePath("../Popup")
color = Color( 0.172549, 0.054902, 0.054902, 0.423529 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupSuccess" type="Popup" parent="."]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="PopupSuccess"]
margin_left = 3.0
margin_right = 568.0
margin_bottom = 336.0
color = Color( 0.152941, 0.266667, 0.788235, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="PopupSuccess"]
margin_right = 570.0
margin_bottom = 94.0
color = Color( 0.137255, 0.517647, 0.517647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PopupSuccess"]
margin_left = 86.4914
margin_top = 26.2275
margin_right = 513.491
margin_bottom = 107.227
custom_fonts/font = ExtResource( 2 )
text = "Llegaste! Felicidades"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="PopupSuccess"]
margin_left = 68.4186
margin_top = 143.232
margin_right = 543.419
margin_bottom = 392.232
custom_fonts/font = ExtResource( 2 )
text = "Final Score: 0
"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonOK3" type="TouchScreenButton" parent="PopupSuccess"]
position = Vector2( 181.05, 266 )
normal = SubResource( 5 )
shape = SubResource( 6 )

[node name="ColorRect" type="ColorRect" parent="PopupSuccess/ButtonOK3"]
margin_left = -121.0
margin_top = -41.0
margin_right = 119.0
margin_bottom = 39.0
color = Color( 0.0784314, 0.498039, 0.592157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="PopupSuccess/ButtonOK3"]
margin_left = -108.0
margin_top = -30.0
margin_right = 83.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 4 )
text = "Volver"
align = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonOK" type="TouchScreenButton" parent="PopupSuccess"]
position = Vector2( 437.05, 266 )
normal = SubResource( 2 )
shape = SubResource( 3 )

[node name="ColorRect2" type="ColorRect" parent="PopupSuccess/ButtonOK"]
margin_left = -99.0
margin_top = -40.0
margin_right = 100.0
margin_bottom = 40.0
color = Color( 0.0784314, 0.498039, 0.592157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="PopupSuccess/ButtonOK"]
margin_left = -68.0
margin_top = -26.0
margin_right = 77.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 4 )
text = "Reset"
align = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="focus_exited" from="PopupDeath" to="." method="_on_Popup_focus_exited"]
[connection signal="pressed" from="PopupDeath/ButtonOK" to="." method="_on_ButtonOK_pressed"]
[connection signal="pressed" from="PopupDeath/ButtonOK2" to="." method="_on_ButtonOK2_pressed"]
[connection signal="focus_exited" from="PopupSuccess" to="." method="_on_Popup_focus_exited"]
[connection signal="pressed" from="PopupSuccess/ButtonOK3" to="." method="_on_ButtonOK2_pressed"]
[connection signal="pressed" from="PopupSuccess/ButtonOK" to="." method="_on_ButtonOK_pressed"]
